# CS100_Lab5_GithubActions

./: .gitignore  CMakeCache.txt  CMakeLists.txt  a.out  area  bigger_area  main2.cpp  perimeter  test  test.cpp  test.hpp
.github/workflows/: main.yml  main2.yml
header/: rectangle.hpp
src/: main.cpp  main1.cpp  mainperimeter.cpp  new_main.cpp  rectangle.cpp  rectangleperimeter.cpp
tests/: test.cpp
